メッシュのSubdivision状態を出力するように修正

--- a/ModoUsd.vcxproj
+++ b/ModoUsd.vcxproj
@@ -88,6 +88,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>common.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy $(SolutionDir)x64\Release\ModoUsd.dll $(ProjectDir)dll /Y /I</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
